Fix '了解更多' button text color: ensure dark text is visible on white background

--- a/src/Projects/YLPM/Styles/main.styl
+++ b/src/Projects/YLPM/Styles/main.styl
@@ -260,19 +260,15 @@ p, .body-text
     justify-content center
     margin-top spacing-lg
 
-    .btn
-      color white
-      border-color white
-
     .btn-primary
       background-color white
-      color gray-800
+      color gray-800 !important
       border-color white
 
       &:hover
         background-color gray-100
         border-color gray-100
-        color gray-800
+        color gray-800 !important
 
     .btn-secondary
       background-color transparent
